# optimizedefi

./: .env.example  .gitignore  DOCKER_QUICKSTART.md  README.md  WALLET_CONNECTION_FIXES.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  config.py  general.py  orchestrator.py  portfolio.py  rebalancing.py  swap.py
backend/app/api/: auth.py  chat.py  health.py  mcp.py  metrics.py  portfolio.py
backend/app/core/: admin.py  auth.py  config.py  middleware.py
backend/app/mcp/: __init__.py  server.py
backend/app/services/: __init__.py  alchemy.py  cache.py  cost_calculator.py  memory_manager.py  metrics.py  oneinch.py  performance_logger.py  portfolio_metrics.py  price_cache.py  rate_limit_manager.py
backend/app/tools/: __init__.py  batch_executor.py  mcp_wrappers.py
backend/app/workflows/: __init__.py  chat_workflow.py
backend/scripts/: test_1inch_api.py  test_chat_1inch.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_auth.py  test_chat_websocket.py
backend/tests/integration/: test_chat_e2e.py
backend/tests/workflows/: test_chat_workflow.py
dev/: architecture.md  backlog.MD  initial-daily-project-plan.MD  llms.txt  phased-implementation-plan_v0.1.MD  prd_v0.1.md
dev/mocks/: Analytics_mock_v1.html  Holdings_mock_v1.html  Overview_mock_v1.html  Rebalance_mock_v1.html  Swap_mock_v1.html  mockup-multi-page_v2.html  mockup-single-page.html
dev/mocks/old/: mockup-multi-page.html
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  test-integration.js  test-portfolio-api.js  test-wallet-connection.html  test-websocket-chat.js
frontend/__mocks__/: wagmi.ts
frontend/__tests__/hooks/: useChat.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/holdings/: page.tsx
frontend/app/rebalance/: page.tsx
frontend/app/swap/: page.tsx
frontend/components/admin/: MetricsDashboard.tsx
frontend/components/auth/: ProtectedRoute.tsx
frontend/components/legal/: EULA.tsx  (+1 more)
frontend/hooks/: useAdminAuth.ts  useAdminAuth.tsx  useChat.ts  usePortfolio.ts  useReadOnlyPortfolio.ts  useSiwe.ts
frontend/lib/: mock-data.ts
frontend/store/: authStore.ts
scripts/: run_tests.sh  test_chat_service.py  test_portfolio_api.py  verify-1inch-api.py
tests/: README.md
(+26 files in other folders)
